--- a/pricing.html
+++ b/pricing.html
@@ -271,7 +271,7 @@ window.Papercups = {
             <div class="div-block-1462">
               <h3 class="pricing-plan-h3">Your Bill</h3>
             </div>
-            <div>Only Editors count for billing, so you&#x27;re charged $22/M ($8 * 2 Editors). No extra data fees. No complex add ons. Simple.</div>
+            <div>$22/M ($8 * 2 Editors). Only users with Editor permissions count for billing. No extra data fees. No complex add ons. Simple.</div>
           </div>
         </div>
       </div>
