--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jun 11 2021 05:28:47 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jun 13 2021 02:24:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="608e4c511590b18b61765294" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -43,13 +43,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 window.Papercups = {
   config: {
     accountId: "137ea282-e7d3-49de-86ba-c321bb6e58f5",
-    title: "Welcome to Storipress 👋",
+    title: "Hey there!",
     subtitle: "Storipress: The Best Publishing Platform Ever",
     primaryColor: "#0693e3",
-    greeting: "Questions? Feedback? Let us know below!",
+    greeting: "Have a question about Storipress? Just want to chat with the founders? Shoot us a message about anything",
     awayMessage: "We're based in Australia so it's currently night time. I'll respond first thing when i'm awake",
     newMessagePlaceholder: "Type your message here",
-    showAgentAvailability: false,
+    showAgentAvailability: true,
     agentAvailableText: "We're online right now!",
     agentUnavailableText: "We're sleeping, we'll respond as soon as possible 😴💤💤",
     requireEmailUpfront: true,
@@ -67,12 +67,6 @@ window.Papercups = {
   },
 };
 </script>
-<script
-type="text/javascript"
-async
-defer
-src="https://app.papercups.io/widget.js"
-></script>
   <script type="text/javascript" async="" defer="" src="https://app.papercups.io/widget.js"></script>
 </head>
 <body class="body">
@@ -365,7 +359,7 @@ src="https://app.papercups.io/widget.js"
           </div>
           <div class="pricing-column-parent">
             <div class="div-block-1471"><img src="images/Tick.svg" loading="lazy" alt="" class="pricingtable-tick">
-              <div class="text-block-62">Build brand identity by uploading custom theme blocks<br></div>
+              <div class="text-block-62">Create and hostmultiple publications on one account and login.<br></div>
             </div>
             <div class="div-block-1471"><img src="images/Tick.svg" loading="lazy" alt="" class="pricingtable-tick">
               <div class="text-block-62">Enterprise grade commenting platform<br></div>
@@ -474,7 +468,7 @@ src="https://app.papercups.io/widget.js"
           <div class="pricingtable-hovershade"></div>
         </div>
         <div class="feattable-feat">
-          <div class="feat hovertext">Multiple publications/account</div>
+          <div class="feat hovertext">Publications per account</div>
           <div data-w-id="0f6296c6-5ff2-c695-e19a-410aa8bc23c9" class="tooltip-trigger feattable multisite">
             <div class="tooltip feats">
               <div class="tooltip-arrow"></div>
@@ -587,7 +581,9 @@ src="https://app.papercups.io/widget.js"
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"></div>
-        <div class="feattable-yesno"></div>
+        <div class="feattable-yesno">
+          <div class="feat">1</div>
+        </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
@@ -624,7 +620,9 @@ src="https://app.papercups.io/widget.js"
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"></div>
+        <div class="feattable-yesno">
+          <div class="feat">2</div>
+        </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
@@ -663,7 +661,9 @@ src="https://app.papercups.io/widget.js"
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
+        <div class="feattable-yesno">
+          <div class="feat">8</div>
+        </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
@@ -700,7 +700,9 @@ src="https://app.papercups.io/widget.js"
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
-        <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
+        <div class="feattable-yesno">
+          <div class="feat">32</div>
+        </div>
         <div class="feattable-yesno"></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
         <div class="feattable-yesno"><img src="images/Tick.svg" loading="lazy" alt=""></div>
